pkg/ace/doc/     manual.bib, ace.tex, examples.tex:     - Reference CHHR00 changed to CHHR01.     manual.bib, basics.tex, interact.tex, otheroptions.tex, strategies.tex:     - Reference HR99b changed to HR01. pkg/ace/standalone-doc/     biblio.bib, al2.tex, CHANGES:     - Reference HR99b changed to HR01. pkg/ace/doc/manual.dvi, pkg/ace/htm/*.htm, pkg/ace/standalone-doc/ace3001.dvi:     - consequence of .tex changes.

--- a/doc/basics.tex
+++ b/doc/basics.tex
@@ -28,7 +28,7 @@ room for a great variety of *strategies* for  coset  enumeration;  two
 ``classical'' ones have been known for a  long  time  as  the  *Felsch
 strategy* and the *HLT strategy* (for Haselgrove, Leech and  Trotter).
 Extensive  experimental  studies  on  many  strategies  can  be  found
-in~\cite{CDHW73}, \cite{Hav91},  \cite{HR99a},  and  \cite{HR99b},  in
+in~\cite{CDHW73},  \cite{Hav91},  \cite{HR99a},  and  \cite{HR01},  in
 particular.
 
 A few basic points should be particularly understood:
