--- a/doc/otheroptions.tex
+++ b/doc/otheroptions.tex
@@ -72,7 +72,7 @@ to be generated and tested, so that  the  group's  relators  are  left
 user cares).
 
 As discussed by Cannon, Dimino, Havas  and  Watson  \cite{CDHW73}  and
-Havas and Ramsay \cite{HR99b} such equivalent presentations can  yield
+Havas and Ramsay \cite{HR01} such equivalent presentations  can  yield
 large variations in  the  number  of  coset  numbers  required  in  an
 enumeration. For this command, we are interested in this variation.
 
