--- a/doc/strategies.tex
+++ b/doc/strategies.tex
@@ -185,7 +185,7 @@ applied to all relators.
 *Guru  Notes:*
 The $1000/1$ mix is not necessarily optimal, and some  experimentation
 may be needed  to  find  an  acceptable  balance  (see,  for  example,
-\cite{HR99b}). Note also that, the longer  the  total  length  of  the
+\cite{HR01}). Note also that, the  longer  the  total  length  of  the
 presentation, the more work needs to be done  for  each  coset  number
 application to the relators; one coset number application  can  result
 in more than $1000$ definitions, reversing the balance between R style
