--- a/standalone-doc/al2.tex
+++ b/standalone-doc/al2.tex
@@ -237,7 +237,7 @@ The \ttt{aep} (all equivalent presentations) option runs an enumeration
   for each possible combination of relator ordering, relator rotations,
   and relator inversions.
 As discussed by Cannon, Dimino, Havas \amp Watson \cite{CDHW73} and Havas
-  \amp Ramsay \cite{HR99b} such equivalent presentations can yield large
+  \amp Ramsay \cite{HR01} such equivalent presentations can yield large
   variations in the number of cosets required in an enumeration.
 For this command, we are interested in this variation.
 
@@ -267,7 +267,7 @@ The order in which the equivalent presentations are generated and tested
   presentation to be generated and tested, so that the group's relators are
   left `unchanged' by running the \ttt{aep} option.
 
-As an example (drawn from the discussion in \cite{HR99b}) consider the index
+As an example (drawn from the discussion in \cite{HR01}) consider the index
   $448$ enumeration of the right cosets of $\langle a^2,Ab \rangle$ in
   $(8,7 \mid 2,3)$, where 
   $$ (8,7 \mid 2,3) 
@@ -660,7 +660,7 @@ The idea here is that most of the work is done C-style (with the relators
 \tsc{Guru Notes:}
 The \ttt{1000}/\ttt{1} mix is not necessarily optimal, and some
   experimentation may be needed to find an acceptable balance (see, for
-  example, \cite{HR99b}).
+  example, \cite{HR01}).
 Note also that, the longer the total length of the presentation, the more
   work needs to be done for each coset application to the relators; one
   coset application can result in more than $1000$ definitions, reversing
