--- a/standalone-doc/biblio.bib
+++ b/standalone-doc/biblio.bib
@@ -25,7 +25,7 @@
 %%    HR   -> HR99a   KB   -> KB70     Lee2 -> Lee77   Hav2 -> Hav76   
 %%    Ede  -> Ede89   Fel  -> Fel98    Moo  -> Moo97   TC   -> TC36
 %%    Lee3 -> Lee63   Sim  -> Sim94    Neu  -> Neu82   Men  -> Men64
-%%    Can  -> Con65   Dic  -> Dic01    HR1  -> HR99b   HR2  -> HR00
+%%    Can  -> Con65   Dic  -> Dic01    HR1  -> HR01    HR2  -> HR00
 %%    Hig  -> Hig51   Neu1 -> Neu54    Neu2 -> Neu79   CH   -> CH97
 %%    CLR  -> CLR90   MKS  -> MKS76    CM   -> CM72
 %%
@@ -303,16 +303,6 @@
   YEAR          = {1901}
 }
 
-@TECHREPORT{HR99b,
-  AUTHOR        = {George Havas and Colin Ramsay},
-  TITLE         = {Experiments in coset enumeration},
-  INSTITUTION   = {Centre for Discrete Mathematics and Computing,
-                   The University of Queensland},
-  YEAR          = {1999},
-  NUMBER        = {13},
-  ADDRESS       = {St.~Lucia 4072, Australia}
-}
-
 @ARTICLE{HR00,
   AUTHOR        = {George Havas and Colin Ramsay},
   TITLE         = {Proving a group trivial made easy: 
@@ -322,6 +312,17 @@
   VOLUME        = {62},
   NUMBER        = {1},
   PAGES         = {105--118}
+}
+
+@INCOLLECTION{HR01,
+  AUTHOR        = {George Havas and Colin Ramsay},
+  TITLE         = {Groups and Computation {III}},
+  BOOKTITLE     = {Ohio State University Mathematical Research Institute
+                   Publications},
+  VOLUME        = {8},
+  PUBLISHER     = {de Gruyter},
+  YEAR          = {2001},
+  PAGES         = {183--192},
 }
 
 @ARTICLE{Hig51,
